tests/sources/should-compile/warnings.c
void main(){
    // unused variable
    int x;

    // uninitialized
    x = x + 1;
}